# tide

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
benchmark/: Cargo.toml
benchmark/benches/: account.rs
benchmark/src/: lib.rs
benchmark/tests/: account.rs
interface/: Cargo.toml
interface/src/: lib.rs
programs/bincode/: Cargo.toml
programs/bincode-v1/: Cargo.toml
programs/bincode-v1/src/: lib.rs
programs/bincode-v2/: Cargo.toml
programs/bincode-v2/src/: lib.rs
programs/bincode/src/: lib.rs
programs/borsh/: Cargo.toml
programs/borsh/src/: lib.rs
programs/bytemuck/: Cargo.toml
programs/bytemuck/src/: lib.rs
programs/transmute/: Cargo.toml
programs/transmute/src/: lib.rs
programs/wincode/: Cargo.toml
programs/wincode/src/: lib.rs
programs/zerocopy/: Cargo.toml
programs/zerocopy/src/: lib.rs
tests/: Cargo.toml
tests/benches/: account.rs  bincode_program.rs  borsh_program.rs  bytemuck_program.rs  transmute_program.rs  wincode_program.rs
tests/benches/setup/: mod.rs
tests/src/: main.rs
