[workspace]
resolver = "2"
members = [
    "interface",
    "programs/bincode",
    "programs/borsh",
    "programs/bytemuck",
    "programs/wincode", 
    "programs/transmute",
    "tests"
]

[workspace.dependencies]
bincode = { version = "2.0.1", default-features = false }
borsh = { version = "1.6.0", default-features = false }
bytemuck = { version = "1.24.0" }
pinocchio = "0.10.0-rc.1"
solana-address = "2.0.0"
solana-program-error = "3.0.0"
tide-interface = { version = "0.0.0", path = "interface" }
wincode = "0.2.1"