[workspace]
resolver = "2"
members = [
    "benchmark",
    "interface",
    "programs/bincode-v1",
    "programs/bincode-v2",
    "programs/borsh",
    "programs/bytemuck",
    "programs/wincode", 
    "programs/transmute",
    "programs/zerocopy"
]

[workspace.dependencies]
bincode-v1 = { package = "bincode", version = "1.3.3" }
bincode = { version = "2.0.1", default-features = false }
borsh = { version = "1.6.0", default-features = false }
bytemuck = { version = "1.24.0" }
pinocchio = "0.10.0-rc.1"
serde = { version = "1.0.228", default-features = false }
solana-address = "2.0.0"
solana-program-error = "3.0.0"
tide-interface = { version = "0.0.0", path = "interface" }
wincode = "0.2.1"
zerocopy = "0.8.30"