[package]
name = "tide"
edition = "2021"
publish = false

[dependencies]
mollusk-svm = "0.7"
mollusk-svm-bencher = "0.7"
solana-account = "3.2.0"
solana-bpf-loader-program = "~3.0"
solana-instruction = "3.1.0"
solana-logger = "3.0.0"
solana-address = { version = "2.0", features = ["decode"] }
solana-rent = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-transaction-context = "~3.0.10"
tide-interface = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
tide-interface = { workspace = true, features = ["full"] }
wincode = { workspace = true }
zerocopy = { workspace = true }