[package]
name = "tide-interface"
description = "Tide types"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
bincode = ["dep:bincode"]
borsh = ["dep:borsh"]
bytemuck = ["dep:bytemuck"]
full = ["bincode", "borsh", "bytemuck", "wincode", "zerocopy"]
wincode = ["dep:wincode"]
zerocopy = ["dep:zerocopy"]

[dependencies]
bincode = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, features = ["derive"], optional = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }
solana-program-error = { workspace = true }
wincode = { workspace = true, features = ["derive"], optional = true }
zerocopy = { workspace = true, features = ["derive"], optional = true }
