[package]
name = "tide-interface"
description = "Tide types"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
bincode-v1 = ["dep:serde"]
bincode-v2 = ["dep:bincode"]
borsh = ["dep:borsh"]
bytemuck = ["dep:bytemuck"]
full = ["bincode-v1", "bincode-v2", "borsh", "bytemuck", "wincode", "zerocopy"]
wincode = ["dep:wincode"]
zerocopy = ["dep:zerocopy"]

[dependencies]
bincode = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, features = ["derive"], optional = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
solana-program-error = { workspace = true }
wincode = { workspace = true, features = ["derive"], optional = true }
zerocopy = { workspace = true, features = ["derive"], optional = true }
