[package]
name = "borsh-program"
version = "0.0.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = { workspace = true }
pinocchio = { workspace = true }
tide-interface = { workspace = true, features = ["borsh"] }
